# winafl-netspoof

./: .gitignore  CMakeLists.txt  fuzz_input.txt  print_queue.py  random_5_byte_input_dir.py  winafl.c
libox/: Cargo.toml  build.rs_no_longer_needed  wrapper.h
libox/src/: connections.rs  drcore.rs  drwrap.rs  fuzzer.rs  lib.rs  modbus.rs  network.rs  responder.rs  utils.rs  wrappers.rs
mutator/: Cargo.toml
mutator/src/: lib.rs
mutator/tests/: mutator_test.rs
